# FblthpFoundries

./: .gitignore  .gitmodules  LICENSE  README.md
fblthp/: CVAE.py  ManaValueModel.py  TransformerVAE.py  app.py  bertbaby.py  config.py  config.yml  constants_example.py  csv2tokens.py  cube.yml  docker-compose.yml  draconictibiamariner.py  dragonlordplacidusaxqueenofthefullmoon.py  finetune_bert.py  finetune_gpt2.py  fortissaxlordofblood.py  godskinmargit.py  gpt.py  init.py  language_model.py  local_extractor.py  pipeline.py  port_corpus.py  pyproject.toml  requirements.txt  run.py  scrape.py  test.py  test_bert.py  tokenizer_test.py  train.py  train_momir_gpt.py  transformer_ed.py  wonder.json  wonder_upgrade.json
fblthp/MLExperiment/: AutoEncoder.py  csv2tokens.py  init.py
fblthp/card-server/: Dockerfile  Pack.py  artFactory.py  card-server.py  card.py  cardFactory.py  cardGenerator.py  cardServer.py  draftManager.py  genMSE.py  htmlRender.py  packQueue.py  requirements.txt
fblthp/cube-app/: app.py  cardFactory.py  cube-gen.py  genMSE.py  magicCard.py
fblthp/data/: datasets.py  mana_vocab.py  tokenizers.py  tokenizers_help.py  wordpiece_tokenizer.json
fblthp/discord-app/: Dockerfile  app.js  cardGenerator.py  commands.js  package-lock.json  package.json  utils.js
fblthp/helpers/: ImageGen.py  cardList.py  edh_reskin.py  eriette.txt  file.py  foundry.py  genMSE.py  magicCard.py  render.py  render_tab.py  renderers.py  settings.py
fblthp/models/: ADVAE.py  TransformerVAE.py  checkpoints.py  loss.py
fblthp/scripts/: openai_test.py
fblthp/utils/: logs.py
(+53 files in other folders)
