[tool.poetry]
name = "fblthp"
version = "0.1.0"
description = ""
authors = ["OWEN JACKSON <u1229070@umail.utah.edu>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
torch = "^2.2.1"
numpy = "^1.26.4"
pandas = "^2.2.1"
transformers = "^4.38.1"
tokenizers = "^0.15.2"
django = "^5.0.4"
pillow = "^10.3.0"
django-crispy-forms = "^2.1"
crispy-bootstrap4 = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
